# ai-dev-tools-zoomcamp

./: .gitignore  README.md
homework1/: GUIA_DJANGO.md  README.md  pyproject.toml
homework1/todo_app/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  tests.py  urls.py  views.py
homework1/todo_app/migrations/: 0001_initial.py  0002_notification.py  0003_remove_pending_status.py  0004_userprofile.py
homework1/todo_project/: settings.py  urls.py
homework2/: PROMPTS.md  README.md
homework2/application_development/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  openapi.yaml  package-lock.json  package.json  render.yaml
homework2/application_development/backend/: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
homework2/application_development/backend/app/: __init__.py  database.py  models.py  routes.py  tasks.py  websocket.py
homework2/application_development/backend/tests/integration/: test_cleanup.py  test_database.py  test_persistence.py  test_rest_api.py  test_websocket.py  test_websocket_diffs.py  test_websocket_endpoint.py
homework2/application_development/backend/tests/unit/: test_database.py  test_database_postgresql.py  test_models.py  test_models_orm.py  test_routes.py  test_tasks.py  test_websocket_diffs.py  test_websocket_endpoint_unit.py  test_websocket_manager.py
homework2/application_development/frontend/: README.md  index.html  install.sh  (+3 more)
week1/: README.md
week1/docs/: notas_raw.md
week2/: README.md
week2/docs/: notas_raw.md  propuestas_articulos_medium.md
(+83 files in other folders)
